Tue Apr 22 19:24:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/rtps.ini:

          Removed reliable, since run_test.pl passes the reliability flag.

Tue Apr 22 19:20:53 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/rtps.ini:

          Added reliability so subscriber will configure the Qos correctly.

Tue Apr 22 15:37:57 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * java/tests/messenger/both/Both.java:
        * java/tests/messenger/publisher/TestPublisher.java:
        * java/tests/messenger/subscriber/TestSubscriber.java:

          Added logging.

Tue Apr 22 15:27:09 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ManualAssertLiveliness/subscriber.cpp:

          Use ERROR in output so that scoreboard detects it.

Tue Apr 22 15:13:11 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/RecorderReplayer/Publisher.cpp:
        * tests/DCPS/RecorderReplayer/Relay.cpp:
        * tests/DCPS/RecorderReplayer/Subscriber.cpp:

          Changed to create all non-participant vars in a sub-scope to
          ensure all references are cleaned up before cleaning up the
          participant and shutting down.

        * tests/DCPS/RecorderReplayer/run_test.pl:

          Fixed error statement.

Mon Apr 21 18:57:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/run_test.pl:

          Reset the transport debug default value to undef.

Mon Apr 21 17:55:05 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/ConfigTransports/Puller.cpp:

          Removed cleanup of the participants.

        * tests/DCPS/ConfigTransports/publisher.cpp:

          Cleaned up commented out code.

        * tests/DCPS/ConfigTransports/subscriber.cpp:

          Moved participant1 and participant2 declaration to the outer scope and
          moved cleanup of participants and shutting down the service participant to