@@ -1,3 +1,11 @@
+Thu Apr 24 14:30:28 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tests/DCPS/Priority/Publisher.cpp:
+        * tests/DCPS/WaitForAck/Publisher.cpp:
+
+          Added storing retrieved entity in a var so the reference added
+          by get_entity is cleaned up.
+
 Tue Apr 22 19:24:17 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * tests/DCPS/LargeSample/rtps.ini:
